# csc201ja21demo

./: .gitignore  CtoF.py  CtoF_entry.py  CtoF_fns.py  TestCongress.py  TestIDMaker.py  TestLab17.py  TestQuadratic.py  bmi.py  button.py  chaos-in.csv  chaos-out.txt  chaos.py  chaos_clamped.py  chaos_except.py  chaos_files.py  chaos_format.py  chaos_if.py  chasethemouse.py  chasethemouse_fns.py  color_entry.py  congress.py  covid_graph.py  covid_graph_coords.py  do_nothing.py  draw_nothing.py  draw_triangle.py  drawline.py  fact.py  fact_fns.py  formatdemo.py  futureval.py  futureval_clamped.py  futureval_fns.py  futureval_while.py  graphics.pyi  graphicsdemo.py  idmaker.py  idmaker_files.py  leapyear.py  (+17 more)
